src/test/ui/error-codes/E0565.stderr
error[E0565]: unsupported literal
  --> $DIR/E0565.rs:14:8
   |
14 | #[repr("C")] //~ ERROR E0565
   |        ^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0565"
